[gd_scene load_steps=28 format=3 uid="uid://cp8qdpp5ihmo0"]

[ext_resource type="Script" path="res://examples/simple_2d_platformer/player/player.gd" id="1_nonhe"]
[ext_resource type="Texture2D" uid="uid://bj3wqaubjklhr" path="res://examples/simple_2d_platformer/kenney_pixelplatformer/Tilemap/characters_packed.png" id="2_iquwb"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_attribute_map.gd" id="3_ngd3r"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute.gd" id="4_fsnb7"]
[ext_resource type="Resource" uid="uid://dfts4bf8f1u8a" path="res://examples/simple_2d_platformer/attributes.tres" id="5_eql4x"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_effect.gd" id="6_a80a8"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/stop_effect_if_0.gd" id="7_78pyi"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute_effect.gd" id="8_l5u52"]
[ext_resource type="Script" path="res://examples/simple_2d_platformer/player/hud.gd" id="9_k3sgl"]
[ext_resource type="PackedScene" uid="uid://cxh5dyttaogko" path="res://addons/godot_gameplay_systems/attributes_and_abilities/debug/abilities_debugger.tscn" id="10_lgfph"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/ability_container.gd" id="11_5ampk"]
[ext_resource type="Script" path="res://examples/simple_2d_platformer/abilities/resurrect/resurrect.gd" id="12_d4hl0"]
[ext_resource type="Script" path="res://examples/simple_2d_platformer/abilities/fireball/fireball_ability.gd" id="13_hqdb3"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/inventory.gd" id="14_lmfca"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/camera_shake/nodes/camera_shake.gd" id="14_u231r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2anqr"]
size = Vector2(24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gufhc"]
atlas = ExtResource("2_iquwb")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqk2w"]
atlas = ExtResource("2_iquwb")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_n63lc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gufhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqk2w")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Resource" id="Resource_lc6fg"]
script = ExtResource("4_fsnb7")
attribute_name = "speed"
minimum_value = 500.0
maximum_value = 500.0
current_value = 500.0

[sub_resource type="Resource" id="Resource_gp60w"]
script = ExtResource("4_fsnb7")
attribute_name = "jump_height"
minimum_value = -500.0
maximum_value = -500.0
current_value = -500.0

[sub_resource type="Resource" id="Resource_dhrtk"]
script = ExtResource("4_fsnb7")
attribute_name = "health"
minimum_value = 0.0
maximum_value = 5.0
current_value = 5.0

[sub_resource type="Resource" id="Resource_jcu10"]
script = ExtResource("4_fsnb7")
attribute_name = "score"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_42y1g"]
script = ExtResource("7_78pyi")

[sub_resource type="Resource" id="Resource_h56y6"]
script = ExtResource("8_l5u52")
life_time = 1
apply_every_second = 60.0
max_applications = 0
applies_as = 0
attribute_name = "health"
minimum_value = 1.0
maximum_value = 1.0
condition = SubResource("Resource_42y1g")

[sub_resource type="Resource" id="Resource_10t7f"]
script = ExtResource("13_hqdb3")
min_speed = 5.0
max_speed = 10.0
ui_name = "Fireball"
cooldown_duration = 1.0
cooldown_continuos = false
grant_automatic = true
grant_tags = Array[String]([])
grant_tags_required = Array[String]([])
tags_activation = Array[String]([])
tags_activation_required = Array[String]([])
tags_block = Array[String](["fireball.cooldown", "dead"])
tags_cancellation_required = Array[String]([])
tags_cooldown_start = Array[String](["fireball.cooldown"])
tags_cooldown_end = Array[String]([])
tags_end_blocking = Array[String](["fireball.cooldown"])
tags_to_remove_on_activation = Array[String]([])
tags_to_remove_on_block = Array[String]([])
tags_to_remove_on_cancellation = Array[String]([])
tags_to_remove_on_cooldown_start = Array[String]([])
tags_to_remove_on_cooldown_end = Array[String](["fireball.cooldown"])
tags_to_remove_on_end = Array[String]([])

[sub_resource type="Resource" id="Resource_hvflv"]
script = ExtResource("12_d4hl0")
health_added = 2.0
score_removed = 5.0
ui_name = "Resurrect"
cooldown_duration = 5.0
cooldown_continuos = false
grant_automatic = true
grant_tags = Array[String]([])
grant_tags_required = Array[String]([])
tags_activation = Array[String]([])
tags_activation_required = Array[String](["dead"])
tags_block = Array[String](["resurrect.cooldown"])
tags_cancellation_required = Array[String]([])
tags_cooldown_start = Array[String](["resurrect.cooldown"])
tags_cooldown_end = Array[String]([])
tags_end_blocking = Array[String]([])
tags_to_remove_on_activation = Array[String](["dead"])
tags_to_remove_on_block = Array[String]([])
tags_to_remove_on_cancellation = Array[String]([])
tags_to_remove_on_cooldown_start = Array[String](["resurrect.cooldown"])
tags_to_remove_on_cooldown_end = Array[String](["resurrect.cooldown"])
tags_to_remove_on_end = Array[String]([])

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_nonhe")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2anqr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2d"]
sprite_frames = SubResource("SpriteFrames_n63lc")
frame_progress = 0.844291

[node name="GameplayAttributeMap" type="Node" parent="."]
script = ExtResource("3_ngd3r")
owning_character = NodePath("..")
attributes = Array[ExtResource("4_fsnb7")]([SubResource("Resource_lc6fg"), SubResource("Resource_gp60w"), SubResource("Resource_dhrtk"), SubResource("Resource_jcu10")])
table = ExtResource("5_eql4x")

[node name="HealthRegen" type="Node" parent="GameplayAttributeMap"]
script = ExtResource("6_a80a8")
table = ExtResource("5_eql4x")
attributes_affected = Array[ExtResource("8_l5u52")]([SubResource("Resource_h56y6")])

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Hud" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_k3sgl")

[node name="DebugTags" type="Label" parent="Camera2D/CanvasLayer/Hud"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="AbilitiesDebugger" parent="Camera2D/CanvasLayer/Hud" instance=ExtResource("10_lgfph")]
layout_mode = 1
alignment = 2
ability_container_path = NodePath("../../../../AbilityContainer")
persist_messages_for = null

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/Hud"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
alignment = 1

[node name="Health" type="Label" parent="Camera2D/CanvasLayer/Hud/HBoxContainer"]
layout_mode = 2
text = "Health: 0"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Camera2D/CanvasLayer/Hud/HBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="AbilityContainer" type="Node" parent="."]
script = ExtResource("11_5ampk")
gameplay_attribute_map_path = NodePath("../GameplayAttributeMap")
abilities = Array[Resource("res://addons/godot_gameplay_systems/attributes_and_abilities/resources/ability.gd")]([SubResource("Resource_10t7f"), SubResource("Resource_hvflv")])

[node name="CameraShake" type="Node" parent="."]
script = ExtResource("14_u231r")
camera_path = NodePath("../Camera2D")
max_strength = 500.0
max_frequency = 500

[node name="Inventory" type="Node" parent="."]
script = ExtResource("14_lmfca")
owner_path = NodePath("..")
